--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.15.1",
     "fibers": "^5.0.0",
+    "laravel-vue-pagination": "^2.3.1",
     "nuxt": "^2.15.7",
     "sass": "~1.32.6",
     "sass-loader": "10",
-    "vee-validate": "^3.4.11"
+    "vee-validate": "^3.4.11",
+    "vue-multiselect": "^2.1.6"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
